--- a/Interface_files/DialogDirAdd.ui
+++ b/Interface_files/DialogDirAdd.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>WinDirAdd</class>
+ <widget class="QDialog" name="WinDirAdd">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -111,7 +111,7 @@ background-color: white;
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="btn_add_dir">
         <property name="styleSheet">
          <string notr="true">QPushButton {
 background-color: white;
