--- a/Interface_files/res.qrc
+++ b/Interface_files/res.qrc
@@ -1,5 +1,8 @@
 <RCC>
   <qresource prefix="icons">
+    <file>icons/image_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
+    <file>icons/folder_open_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
+    <file>icons/send_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
     <file>icons/format_italic_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
     <file>icons/text_fields_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
     <file>icons/format_bold_24dp_FILL0_wght400_GRAD0_opsz24.svg</file>
